Updated NetisHR files

--- a/netishr/administrator_remuneration_payitems.html
+++ b/netishr/administrator_remuneration_payitems.html
@@ -611,8 +611,8 @@
                                                                     <tr>
                                                                         <th data-toggle="true">Code</th>
                                                                         <th data-toggle="true">Name</th>
-                                                                        <th data-toggle="true">Pay Item Type</th>
-                                                                        <th data-toggle="true">Pay Component Type</th>
+                                                                        <th data-toggle="true">Pay/tax Type</th>
+                                                                        <th data-toggle="true">Pay/tax Sub-type</th>
                                                                         <th data-hide="all">Description Value</th>
                                                                         <th data-hide="all">Reference Value</th>
                                                                         <th data-hide="all">Percentage Value</th>
