--- a/netishr/payroll_salary_entry.html
+++ b/netishr/payroll_salary_entry.html
@@ -406,8 +406,8 @@
 
 
                                     <div class="col-sm-7">
-                                        <button type="button" class="btn btn-primary btn-xs" data-toggle="modal" data-target="#newscorerule">Copy all from previous</button>
-                                        <div class="modal" id="newscorerule">
+                                        <button type="button" class="btn btn-primary btn-xs" data-toggle="modal" data-target="#copyall">Copy all from previous</button>
+                                        <div class="modal" id="copyall">
                                             <div class="modal-dialog">
                                                 <div class="modal-content animated">
                                                     <div class="modal-header">
@@ -415,6 +415,7 @@
                                                         <h4 class="modal-title">Copy all</h4>
                                                     </div>
                                                     <div class="modal-body">
+                                                        Are you sure to copy all salary data from previous month?
                                                     </div>
                                                     <div class="modal-footer">
                                                         <button type="button" class="btn btn-white" data-dismiss="modal">Close</button>
@@ -634,35 +635,16 @@
                                                 <label>Job title</label>: Senior Manager
                                                 <br>
 
-                                                <button type="button" class="btn btn-primary btn-xs" data-toggle="modal" data-target="#newscorerule">Copy from previous</button>
-                                                <div class="modal" id="newscorerule">
+                                                <button type="button" class="btn btn-primary btn-xs" data-toggle="modal" data-target="#copyindividual">Copy from previous</button>
+                                                <div class="modal" id="copyindividual">
                                                     <div class="modal-dialog">
                                                         <div class="modal-content animated">
                                                             <div class="modal-header">
                                                                 <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                                                                <i class="fa fa-laptop modal-icon"></i>
-                                                                <h4 class="modal-title">New score rule</h4>
-                                                                <small class="font-bold">Please enter info for new score rule.</small>
+                                                                <h4 class="modal-title">Copy</h4>
                                                             </div>
                                                             <div class="modal-body">
-                                                                <div class="form-group">
-                                                                    <label class="col-sm-2 control-label">No.: </label>
-                                                                    <div class="col-sm-10">
-                                                                        <input type="text" class="form-control">
-                                                                    </div>
-                                                                    <label class="col-sm-2 control-label">Condition: </label>
-                                                                    <div class="col-sm-10">
-                                                                        <input type="text" class="form-control">
-                                                                    </div>
-                                                                    <label class="col-sm-2 control-label">Score: </label>
-                                                                    <div class="col-sm-10">
-                                                                        <input type="text" class="form-control">
-                                                                    </div>
-                                                                    <label class="col-sm-2 control-label">Description: </label>
-                                                                    <div class="col-sm-10">
-                                                                        <input type="text" class="form-control">
-                                                                    </div>
-                                                                </div>
+                                                                Are you sure to copy from previous month?
                                                             </div>
                                                             <div class="modal-footer">
                                                                 <button type="button" class="btn btn-white" data-dismiss="modal">Close</button>
