--- a/netishr/payroll_salary_calculation.html
+++ b/netishr/payroll_salary_calculation.html
@@ -410,7 +410,7 @@
                                                         <th rowspan="2" data-toggle="true">ID</th>
                                                         <th rowspan="2" data-toggle="true">Name</th>
                                                         <th rowspan="2" data-toggle="true">Job Title</th>
-                                                        <th rowspan="2" data-toggle="true">Income tax</th>
+                                                        <th rowspan="2" data-toggle="true">Take-home pay</th>
                                                         <th></th>
                                                     </tr>
                                                 </thead>
@@ -419,7 +419,7 @@
                                                         <td>201304010012</td>
                                                         <td>Nana Karyana</td>
                                                         <td>Finance Manager</td>
-                                                        <td>549,133</td>
+                                                        <td>10,549,133</td>
                                                         <td>
                                                             <a href="payroll_salary_calculation_details.html">
                                                                 <button type="button" class="btn btn-primary btn-xs">Details</button>
@@ -430,7 +430,7 @@
                                                         <td>201304010013</td>
                                                         <td>Nono Karyono</td>
                                                         <td>IT Manager</td>
-                                                        <td>759,233</td>
+                                                        <td>15,759,233</td>
                                                         <td>
                                                             <a href="payroll_salary_calculation_details.html">
                                                                 <button type="button" class="btn btn-primary btn-xs">Details</button>
