--- a/netishr/payroll_tax_calculation_details.html
+++ b/netishr/payroll_tax_calculation_details.html
@@ -407,7 +407,7 @@
                                         Ann Smith
                                         <button type="button" class="btn btn-primary btn-xs" data-toggle="modal" data-target="#newjoblevel">Calculate monthly</button>
                                         <button type="button" class="btn btn-primary btn-xs" data-toggle="modal" data-target="#newjoblevel">Calculate yearly</button>
-                                        <button type="button" class="btn btn-primary btn-xs" data-toggle="modal" data-target="#newjoblevel">Export tax report</button>
+                                        <button type="button" class="btn btn-primary btn-xs" data-toggle="modal" data-target="#newjoblevel">Show tax report</button>
                                     </h1>
 
                                         <small class="text-muted">ID: 201301011234 | Job title: Finance Manager | Tax ID: 1234567 | Martial status: Not married | No. of children: 0</small>
@@ -444,8 +444,8 @@
                                                         <tr>
                                                             <th data-toggle="true"></th>
                                                             <th data-toggle="true">Code</th>
-                                                            <th data-toggle="true">Payitem Type</th>
-                                                            <th data-toggle="true">Pay Item</th>
+                                                            <th data-toggle="true">Pay/tax Type</th>
+                                                            <th data-toggle="true">Pay/tax Sub-type</th>
                                                             <th data-toggle="true">Amount</th>
 
                                                         </tr>
