--- a/netishr/payroll_salary_calculation_details.html
+++ b/netishr/payroll_salary_calculation_details.html
@@ -372,7 +372,7 @@
                 <div class="col-lg-12">
                     <div class="row wrapper border-bottom white-bg page-heading">
                         <div class="col-lg-10">
-                            <h2>Salary Calculation Details</h2>
+                            <h2>Salary Calculation Details (Payslip)</h2>
                             <ol class="breadcrumb">
                                 <li>
                                     <a href="index.html">Home</a>
@@ -409,6 +409,7 @@
                                         <h1>
                                         Ann Smith
                                         <button type="button" class="btn btn-primary btn-xs" data-toggle="modal" data-target="#newjoblevel">Calculate</button>
+                                        <button type="button" class="btn btn-primary btn-xs" data-toggle="modal" data-target="#newjoblevel">Download payslip</button>
                                     </h1>
 
                                         <small class="text-muted">ID: 201301011234 | Job title: Finance Manager | Tax ID: 1234567 | Martial status: Not married | No. of children: 0</small>
@@ -440,60 +441,50 @@
                                                 <table class="footable table table-stripped toggle-arrow-tiny">
                                                     <thead>
                                                         <tr>
-                                                            <th colspan="4">Income</th>
+                                                            <th colspan="3">Income</th>
                                                         </tr>
                                                         <tr>
-                                                            <th data-toggle="true">Category</th>
                                                             <th data-toggle="true">Item</th>
                                                             <th data-toggle="true">Amount</th>
                                                         </tr>
                                                     </thead>
                                                     <tbody>
                                                         <tr>
-                                                            <td>Wages</td>
                                                             <td>Basic Salary</td>
                                                             <td>8,000,000</td>
                                                         </tr>
                                                         <tr>
-                                                            <td>Allowances</td>
                                                             <td>Income Tax Allowance</td>
                                                             <td>80,000</td>
                                                         </tr>
                                                         <tr>
-                                                            <td>Allowances</td>
                                                             <td>Other Allowances</td>
                                                             <td>150,000</td>
                                                         </tr>
                                                         <tr>
-                                                            <td>Allowances</td>
                                                             <td>Other Income</td>
                                                             <td>0</td>
                                                         </tr>
                                                         <tr>
-                                                            <td>Allowances</td>
                                                             <td>Insurance Paid By Employer</td>
                                                             <td>250,000</td>
                                                         </tr>
                                                         <tr>
-                                                            <td>Allowances</td>
                                                             <td>Tantiem, Bonus, THR</td>
                                                             <td>0</td>
                                                         </tr>
                                                         <tr>
-                                                            <td>Allowances</td>
                                                             <td>Received in kind imposed cuts PPh Article 21</td>
                                                             <td>0</td>
                                                         </tr>
                                                         <tr>
-                                                            <td>Allowances</td>
                                                             <td>Overtime</td>
                                                             <td>356,987</td>
                                                         </tr>
                                                     </tbody>
                                                     <tfoot>
                                                         <tr>
-                                                            <td></td>
-                                                            <td>Total:</td>
+                                                            <td class="pull-right">Total:</td>
                                                             <td>9,250,987</td>
                                                         </tr>
                                                     </tfoot>
@@ -503,10 +494,9 @@
                                                 <table class="footable table table-stripped toggle-arrow-tiny">
                                                     <thead>
                                                         <tr>
-                                                            <th colspan="4">Deductions</th>
+                                                            <th colspan="3">Deductions</th>
                                                         </tr>
                                                         <tr>
-                                                            <th data-toggle="true">Category</th>
                                                             <th data-toggle="true">Item</th>
                                                             <th data-toggle="true">Amount</th>
 
@@ -514,62 +504,33 @@
                                                     </thead>
                                                     <tbody>
                                                         <tr>
-                                                            <td>Wages</td>
                                                             <td>Position Allowances</td>
                                                             <td>100,000</td>
                                                         </tr>
                                                         <tr>
-                                                            <td>Allowances</td>
                                                             <td>Insurance Paid By Employee</td>
                                                             <td>150,000</td>
                                                         </tr>
                                                         <tr>
-                                                            <td>Allowances</td>
                                                             <td>Other Dues</td>
                                                             <td>25,000</td>
                                                         </tr>
                                                         <tr>
-                                                            <td>Allowances</td>
                                                             <td>Other Deduction</td>
                                                             <td>0</td>
                                                         </tr>
                                                     </tbody>
                                                     <tfoot>
                                                         <tr>
-                                                            <td></td>
-                                                            <td>Total:</td>
+                                                            <td class="pull-right">Total:</td>
                                                             <td>275,000</td>
                                                         </tr>
                                                     </tfoot>
                                                 </table>
                                             </div>
-                                            <div class="table-responsive">
-                                                <table class="footable table table-stripped toggle-arrow-tiny">
-                                                    <thead>
-                                                        <tr>
-                                                            <th colspan="4">Income Tax Calculation</th>
-                                                        </tr>
-                                                        <tr>
-                                                            <th data-toggle="true">Item</th>
-                                                            <th data-toggle="true">Amount</th>
 
-                                                        </tr>
-                                                    </thead>
-                                                    <tbody>
-                                                        <tr>
-                                                            <td>Total Net Income)</td>
-                                                            <td>9,000,000</td>
-                                                        </tr>
-                                                        <tr>
-                                                            <td>Income Tax Article 21 payable</td>
-                                                            <td>1,234,567</td>
-                                                        </tr>
-                                                        <tr>
-                                                            <td>Take home pay</td>
-                                                            <td>8,234,567</td>
-                                                        </tr>
-                                                    </tbody>
-                                                </table>
+                                            <div>
+                                                <label>Take-home Pay</label>:&nbsp;13,456,000
                                             </div>
 
                                         </div>
