--- a/netishr/competency_dictionary.html
+++ b/netishr/competency_dictionary.html
@@ -400,6 +400,34 @@
                                 <div class="tab-content">
                                     <div id="tab-1" class="tab-pane active">
                                         <div class="panel-body">
+                                            <button class="btn-white btn btn-xs pull-right" data-toggle="modal" data-target="#category1">
+                                                Edit category</button>
+                                            <div class="modal" id="category1">
+                                                <div class="modal-dialog">
+                                                    <div class="modal-content animated">
+                                                        <div class="modal-header">
+                                                            <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                                                            <i class="fa fa-laptop modal-icon"></i>
+                                                            <h4 class="modal-title">Edit category</h4>
+                                                            <small class="font-bold">Please edit category</small>
+                                                        </div>
+                                                        <div class="modal-body">
+                                                            <div class="form-group">
+                                                                <div class="row">
+                                                                    <label class="col-sm-3 control-label">Category: </label>
+                                                                    <div class="col-sm-9">
+                                                                        <input type="text" class="form-control">
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                        <div class="modal-footer">
+                                                            <button type="button" class="btn btn-white" data-dismiss="modal">Close</button>
+                                                            <button type="button" class="btn btn-primary">Save changes</button>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
                                             <table class="footable table table-stripped toggle-arrow-tiny">
                                                 <thead>
                                                     <tr>
@@ -605,6 +633,38 @@
                                     </div>
                                     <div id="tab-2" class="tab-pane">
                                         <div class="panel-body">
+
+
+                                            <button class="btn-white btn btn-xs pull-right" data-toggle="modal" data-target="#category3">Edit category</button>
+                                            <div class="modal" id="category3">
+                                                <div class="modal-dialog">
+                                                    <div class="modal-content animated">
+                                                        <div class="modal-header">
+                                                            <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                                                            <i class="fa fa-laptop modal-icon"></i>
+                                                            <h4 class="modal-title">Edit category</h4>
+                                                            <small class="font-bold">Please edit category</small>
+                                                        </div>
+                                                        <div class="modal-body">
+                                                            <div class="form-group">
+                                                                <div class="row">
+                                                                    <label class="col-sm-3 control-label">Category: </label>
+                                                                    <div class="col-sm-9">
+                                                                        <input type="text" class="form-control">
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                        <div class="modal-footer">
+                                                            <button type="button" class="btn btn-white" data-dismiss="modal">Close</button>
+                                                            <button type="button" class="btn btn-primary">Save changes</button>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+
+
+
                                             <table class="footable table table-stripped toggle-arrow-tiny">
                                                 <thead>
                                                     <tr>
@@ -810,6 +870,38 @@
                                     </div>
                                     <div id="tab-3" class="tab-pane">
                                         <div class="panel-body">
+
+
+                                            <button class="btn-white btn btn-xs pull-right" data-toggle="modal" data-target="#category2">Edit category</button>
+                                            <div class="modal" id="category2">
+                                                <div class="modal-dialog">
+                                                    <div class="modal-content animated">
+                                                        <div class="modal-header">
+                                                            <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                                                            <i class="fa fa-laptop modal-icon"></i>
+                                                            <h4 class="modal-title">Edit category</h4>
+                                                            <small class="font-bold">Please edit category</small>
+                                                        </div>
+                                                        <div class="modal-body">
+                                                            <div class="form-group">
+                                                                <div class="row">
+                                                                    <label class="col-sm-3 control-label">Category: </label>
+                                                                    <div class="col-sm-9">
+                                                                        <input type="text" class="form-control">
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                        <div class="modal-footer">
+                                                            <button type="button" class="btn btn-white" data-dismiss="modal">Close</button>
+                                                            <button type="button" class="btn btn-primary">Save changes</button>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+
+
+
                                             <table class="footable table table-stripped toggle-arrow-tiny">
                                                 <thead>
                                                     <tr>
@@ -1016,6 +1108,38 @@
                                     </div>
                                     <div id="tab-4" class="tab-pane">
                                         <div class="panel-body">
+
+
+                                            <button class="btn-white btn btn-xs pull-right" data-toggle="modal" data-target="#category4">Edit category</button>
+                                            <div class="modal" id="category4">
+                                                <div class="modal-dialog">
+                                                    <div class="modal-content animated">
+                                                        <div class="modal-header">
+                                                            <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                                                            <i class="fa fa-laptop modal-icon"></i>
+                                                            <h4 class="modal-title">Edit category</h4>
+                                                            <small class="font-bold">Please edit category</small>
+                                                        </div>
+                                                        <div class="modal-body">
+                                                            <div class="form-group">
+                                                                <div class="row">
+                                                                    <label class="col-sm-3 control-label">Category: </label>
+                                                                    <div class="col-sm-9">
+                                                                        <input type="text" class="form-control">
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                        <div class="modal-footer">
+                                                            <button type="button" class="btn btn-white" data-dismiss="modal">Close</button>
+                                                            <button type="button" class="btn btn-primary">Save changes</button>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+
+
+
                                             <table class="footable table table-stripped toggle-arrow-tiny">
                                                 <thead>
                                                     <tr>
