Updated NetisHR files

--- a/netishr/administrator_performance_evaluation.html
+++ b/netishr/administrator_performance_evaluation.html
@@ -466,7 +466,7 @@
                                                                 <tbody>
                                                                     <tr>
                                                                         <td>1</td>
-                                                                        <td>T &lt; 75</td>
+                                                                        <td>A &lt; 75</td>
                                                                         <td>1</td>
                                                                         <td>Tidak memenuhi sebagian besar dari Target</td>
                                                                         <td>
@@ -482,7 +482,7 @@
                                                                     </tr>
                                                                     <tr>
                                                                         <td>2</td>
-                                                                        <td>75 =&lt; T &lt; 85</td>
+                                                                        <td>75 =&lt; A &lt; 85</td>
                                                                         <td>2</td>
                                                                         <td>Memenuhi sebagian besar Target</td>
                                                                         <td>
@@ -499,7 +499,7 @@
                                                                     </tr>
                                                                     <tr>
                                                                         <td>3</td>
-                                                                        <td>85 =&lt; T &lt; 95</td>
+                                                                        <td>85 =&lt; A &lt; 95</td>
                                                                         <td>3</td>
                                                                         <td>Mendekati Target</td>
                                                                         <td>
@@ -516,7 +516,7 @@
                                                                     </tr>
                                                                     <tr>
                                                                         <td>4</td>
-                                                                        <td>95 =&lt; T </td>
+                                                                        <td>95 =&lt; A </td>
                                                                         <td>4</td>
                                                                         <td>Sesuai Target</td>
                                                                         <td>
@@ -543,9 +543,9 @@
                                                             </table>
                                                         </div>
                                                     </div>
-                                                </div>T: Total of actual achievements each cycle
+                                                </div> A: Total of actual achievements in each cycle
                                                 <br> W: Weight, in percentage
-                                                <br> Any: This matches any value of T and W
+                                                <br> Any: This matches any value of A and W
 
                                             </div>
 
@@ -638,8 +638,8 @@
                                                             </div>
                                                         </div>
                                                     </div>
-                                                    Any: This matches any value of P, W and S
-                                                    <br> T: Total of actual achievements each cycle
+                                                    Any: This matches any value of A, W and S
+                                                    <br> A: Total of actual achievements in each cycle
                                                     <br> W: Weight, in percentage
                                                     <br> S: Score
 
@@ -877,8 +877,8 @@
                                                             </div>
                                                         </div>
                                                     </div>
-                                                    Any: This matches any value of P, W and S
-                                                    <br> T: Total of actual achievements each cycle
+                                                    Any: This matches any value of A, W and S
+                                                    <br> A: Total of actual achievements in each cycle
                                                     <br> W: Weight, in percentage
                                                     <br> S: Score
 
