--- a/netishr/index.html
+++ b/netishr/index.html
@@ -111,7 +111,7 @@
                             <li><a href="#"><span class="nav-label">Workload Analysis</span><span class="fa arrow"></span></a>
                                 <ul class="nav nav-third-level">
                                     <li>
-                                        <a href="workloadanalysis_pic.html">PIC Assignment</a>
+                                        <a href="workloadanalysis_pics.html">PIC Assignment</a>
                                     </li>
                                     <li>
                                         <a href="workload_calculation.html">Workload Calculation</a>
@@ -196,16 +196,13 @@
                                     <li>
                                         <a href="#">Work Shifts</a>
                                     </li>
-                                    <li>
-                                        <a href="#">Benefits</a>
-                                    </li>
                                     <li><a href="#">Benefits<span class="fa arrow"></span></a>
                                         <ul class="nav nav-third-level">
                                             <li>
-                                                <a href="benefitsrequestsandapprovals.html">Requests and Approvals</a>
+                                                <a href="medicalexpense.html">Medical Expense</a>
                                             </li>
                                             <li>
-                                                <a href="benefitssummary.html">Summary</a>
+                                                <a href="medicalexpenseadministration.html">Medical Expense Administration</a>
                                             </li>
                                         </ul>
                                     </li>
@@ -215,7 +212,7 @@
                                                 <a href="bistripsrequestsandapprovals.html">Requests and Approvals</a>
                                             </li>
                                             <li>
-                                                <a href="bistripssummary.html">Summary</a>
+                                                <a href="bistripssummary.html">Administration</a>
                                             </li>
                                         </ul>
                                     </li>
@@ -537,7 +534,6 @@
                                                     <p>Submit your performance planning today.
                                                     </p>
 
-                                                    <p><span data-diameter="40" class="updating-chart">5,3,9,6,5,9,7,3,5,2,5,3,9,6,5,9,4,7,3,2,9,8,7,4,5,1,2,9,5,4,7,2,7,7,3,5,2</span></p>
                                                 </div>
                                             </div>
                                         </div>
@@ -755,7 +751,6 @@
 
                                     </div>
                                 </div>
-
                             </div>
                             <div class="col-lg-4">
                                 <div class="ibox float-e-margins">
