--- a/netishr/workloadanalysis_pics_new.html
+++ b/netishr/workloadanalysis_pics_new.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>NetisHR | Workload Analysis PIC</title>
+    <title>NetisHR | Workload Analysis PICs</title>
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="font-awesome/css/font-awesome.css" rel="stylesheet">
@@ -380,7 +380,7 @@
             </div>
             <div class="row wrapper border-bottom white-bg page-heading">
                 <div class="col-lg-10">
-                    <h2>Workload Analysis PIC</h2>
+                    <h2>Workload Analysis PICs</h2>
                     <ol class="breadcrumb">
                         <li>
                             <a href="index.html">Home</a>
@@ -389,7 +389,7 @@
                             <a>Job</a>
                         </li>
                         <li class="active">
-                            <strong>Workload Analysis PIC</strong>
+                            <strong>Workload Analysis PICs</strong>
                         </li>
                     </ol>
                 </div>
@@ -420,8 +420,6 @@
                             Select one or more job titles whose workload analysis is to be done by the person selected above.
                         </p>
                         <p>
-
-
                             <input type="checkbox" class="js-switch" checked />&nbsp;Show direct subordinates only
                         </p>
 
