--- a/netishr/index.html
+++ b/netishr/index.html
@@ -108,16 +108,7 @@
                                 </ul>
                             </li>
                             <li><a href="job_description.html">Job Description</a></li>
-                            <li><a href="#"><span class="nav-label">Workload Analysis</span><span class="fa arrow"></span></a>
-                                <ul class="nav nav-third-level">
-                                    <li>
-                                        <a href="workloadanalysis_pics.html">PIC Assignment</a>
-                                    </li>
-                                    <li>
-                                        <a href="workload_calculation.html">Workload Calculation</a>
-                                    </li>
-                                </ul>
-                            </li>
+                            <li><a href="workload_analysis.html">Workload Analysis</a></li>
                             <li><a href="accountability_matrix.html">Accountability Matrix</a></li>
                         </ul>
                     </li>
