--- a/netishr/performance_information_kpi.html
+++ b/netishr/performance_information_kpi.html
@@ -413,7 +413,8 @@
                                                 <th colspan="4" class="center">Final</th>
                                             </tr>
                                             <tr>
-                                                <th>T</th>
+                                                <th>T
+                                                </th>
                                                 <th>W</th>
                                                 <th>T</th>
                                                 <th>W</th>
@@ -438,98 +439,98 @@
                                         </thead>
                                         <tbody>
                                             <tr>
-                                                <th>1.1.2.1 Viverra commodo Curabitur ac augue</th>
-                                                <th>100</th>
-                                                <th>40</th>
-                                                <th>30</th>
-                                                <th>15</th>
-                                                <th>35</th>
-                                                <th>116.67</th>
-                                                <th>30</th>
-                                                <th>15</th>
-                                                <th>30</th>
-                                                <th>100.00</th>
-                                                <th>20</th>
-                                                <th>5</th>
-                                                <th>20</th>
-                                                <th>100.00</th>
-                                                <th>20</th>
-                                                <th>5</th>
-                                                <th>20</th>
-                                                <th>100.00</th>
-                                                <th>105</th>
+                                                <td>1.1.2.1 Viverra commodo Curabitur ac augue</td>
+                                                <td>100</td>
+                                                <td>40</td>
+                                                <td>30</td>
+                                                <td>15</td>
+                                                <td>35</td>
+                                                <td>116.67</td>
+                                                <td>30</td>
+                                                <td>15</td>
+                                                <td>30</td>
+                                                <td>100.00</td>
+                                                <td>20</td>
+                                                <td>5</td>
+                                                <td>20</td>
+                                                <td>100.00</td>
+                                                <td>20</td>
+                                                <td>5</td>
+                                                <td>20</td>
+                                                <td>100.00</td>
+                                                <td>105</td>
                                                 <td>4</td>
                                                 <td>160</td>
                                             </tr>
                                             <tr>
-                                                <th>1.1.2.2 Urna commodo Curabitur ac augue urna</th>
-                                                <th>100</th>
-                                                <th>20</th>
-                                                <th>30</th>
-                                                <th>15</th>
-                                                <th>30</th>
-                                                <th>100.00</th>
-                                                <th>30</th>
-                                                <th>15</th>
-                                                <th>30</th>
-                                                <th>100.00</th>
-                                                <th>20</th>
-                                                <th>5</th>
-                                                <th>20</th>
-                                                <th>100.00</th>
-                                                <th>20</th>
-                                                <th>5</th>
-                                                <th>20</th>
-                                                <th>100.00</th>
-                                                <th>100</th>
+                                                <td>1.1.2.2 Urna commodo Curabitur ac augue urna</td>
+                                                <td>100</td>
+                                                <td>20</td>
+                                                <td>30</td>
+                                                <td>15</td>
+                                                <td>30</td>
+                                                <td>100.00</td>
+                                                <td>30</td>
+                                                <td>15</td>
+                                                <td>30</td>
+                                                <td>100.00</td>
+                                                <td>20</td>
+                                                <td>5</td>
+                                                <td>20</td>
+                                                <td>100.00</td>
+                                                <td>20</td>
+                                                <td>5</td>
+                                                <td>20</td>
+                                                <td>100.00</td>
+                                                <td>100</td>
                                                 <td>4</td>
                                                 <td>80</td>
                                             </tr>
                                             <tr>
-                                                <th>1.1.2.3 Curabitur Viverra commodo ac augue urna</th>
-                                                <th>100</th>
-                                                <th>15</th>
-                                                <th>30</th>
-                                                <th>15</th>
-                                                <th>30</th>
-                                                <th>100.00</th>
-                                                <th>30</th>
-                                                <th>15</th>
-                                                <th>30</th>
-                                                <th>100.00</th>
-                                                <th>20</th>
-                                                <th>5</th>
-                                                <th>20</th>
-                                                <th>100.00</th>
-                                                <th>20</th>
-                                                <th>5</th>
-                                                <th>20</th>
-                                                <th>100.00</th>
-                                                <th>100</th>
+                                                <td>1.1.2.3 Curabitur Viverra commodo ac augue urna</td>
+                                                <td>100</td>
+                                                <td>15</td>
+                                                <td>30</td>
+                                                <td>15</td>
+                                                <td>30</td>
+                                                <td>100.00</td>
+                                                <td>30</td>
+                                                <td>15</td>
+                                                <td>30</td>
+                                                <td>100.00</td>
+                                                <td>20</td>
+                                                <td>5</td>
+                                                <td>20</td>
+                                                <td>100.00</td>
+                                                <td>20</td>
+                                                <td>5</td>
+                                                <td>20</td>
+                                                <td>100.00</td>
+                                                <td>100</td>
                                                 <td>4</td>
                                                 <td>60</td>
                                             </tr>
                                             <tr>
-                                                <th>1.1.2.4 Ac augue urna viverra commodo Curabitur </th>
-                                                <th>100</th>
-                                                <th>25</th>
-                                                <th>30</th>
-                                                <th>15</th>
-                                                <th>30</th>
-                                                <th>100.00</th>
-                                                <th>30</th>
-                                                <th>15</th>
-                                                <th>30</th>
-                                                <th>100.00</th>
-                                                <th>20</th>
-                                                <th>5</th>
-                                                <th>20</th>
-                                                <th>100.00</th>
-                                                <th>20</th>
-                                                <th>5</th>
-                                                <th>18</th>
-                                                <th>90.00</th>
-                                                <th>98</th>
+                                                <td>1.1.2.4 Ac augue urna viverra commodo Curabitur </td>
+                                                <td>100</td>
+                                                <td>25</td>
+                                                <td>30</td>
+                                                <td>15</td>
+                                                <td>30</td>
+                                                <td>100.00</td>
+                                                <td>30</td>
+                                                <td>15</td>
+                                                <td>30</td>
+                                                <td>100.00</td>
+                                                <td>20</td>
+                                                <td>5</td>
+                                                <td>20</td>
+                                                <td>100.00</td>
+                                                <td>20</td>
+                                                <td>5</td>
+                                                <td>18</td>
+                                                <td>90.00</td>
+                                                <td>98</td>
                                                 <td>4</td>
                                                 <td>100</td>
                                             </tr>
