--- a/netishr/index.html
+++ b/netishr/index.html
@@ -200,10 +200,7 @@
                                     <li><a href="#">Business trips<span class="fa arrow"></span></a>
                                         <ul class="nav nav-third-level">
                                             <li>
-                                                <a href="bistripsrequestsandapprovals.html">Requests and Approvals</a>
-                                            </li>
-                                            <li>
-                                                <a href="bistripssummary.html">Administration</a>
+                                                <a href="bistripsreimbursement.html">Reimbursement</a>
                                             </li>
                                         </ul>
                                     </li>
