--- a/netishr/medicalexpense.html
+++ b/netishr/medicalexpense.html
@@ -91,16 +91,7 @@
                                 </ul>
                             </li>
                             <li><a href="job_description.html">Job Description</a></li>
-                            <li><a href="#"><span class="nav-label">Workload Analysis</span><span class="fa arrow"></span></a>
-                                <ul class="nav nav-third-level">
-                                    <li>
-                                        <a href="workloadanalysis_pic.html">PIC Assignment</a>
-                                    </li>
-                                    <li>
-                                        <a href="workload_calculation.html">Workload Calculation</a>
-                                    </li>
-                                </ul>
-                            </li>
+                            <li><a href="workload_analysis.html">Workload Analysis</a></li>
                             <li><a href="accountability_matrix.html">Accountability Matrix</a></li>
                         </ul>
                     </li>
@@ -179,11 +170,22 @@
                                     <li>
                                         <a href="#">Work Shifts</a>
                                     </li>
-                                    <li>
-                                        <a href="#">Benefits</a>
+                                    <li><a href="#">Benefits<span class="fa arrow"></span></a>
+                                        <ul class="nav nav-third-level">
+                                            <li>
+                                                <a href="medicalexpense.html">Medical Expense</a>
+                                            </li>
+                                            <li>
+                                                <a href="medicalexpenseadministration.html">Medical Expense Administration</a>
+                                            </li>
+                                        </ul>
                                     </li>
-                                    <li>
-                                        <a href="#">Business Trips</a>
+                                    <li><a href="#">Business trips<span class="fa arrow"></span></a>
+                                        <ul class="nav nav-third-level">
+                                            <li>
+                                                <a href="bistripsreimbursement.html">Reimbursement</a>
+                                            </li>
+                                        </ul>
                                     </li>
                                 </ul>
                             </li>
@@ -201,9 +203,6 @@
                                     </li>
                                     <li>
                                         <a href="payroll_salary_calculation.html">Salary Calculation</a>
-                                    </li>
-                                    <li>
-                                        <a href="payroll_salary_calculation_details.html">Payslip</a>
                                     </li>
                                 </ul>
                             </li>
@@ -408,8 +407,6 @@
 
                                         <th data-toggle="true">Status</th>
                                         <th data-toggle="true">Request</th>
-                                        <th data-hide="all">Completion</th>
-                                        <th data-hide="all">People</th>
                                         <th data-toggle="true">Type</th>
                                         <th class="text-center"></th>
                                     </tr>
@@ -417,25 +414,12 @@
                                 <tbody>
                                     <tr>
                                         <td class="project-status">
-                                            <span class="label label-primary">On-going</span>
+                                            <span class="label label-info">Draft</span>
                                         </td>
                                         <td class="project-title">
-                                            <strong>Monica Smith</strong> submitted Medical Expense approval request.
+                                            <strong>Monica Smith</strong> drafted medical expense request.
                                             <br>
                                             <small class="text-muted">Today 5:60 pm - 12.06.2016</small>
-                                        </td>
-                                        <td class="project-completion">
-                                            <small>Completion with: 48%</small>
-                                            <div class="progress progress-mini">
-                                                <div style="width: 48%;" class="progress-bar"></div>
-                                            </div>
-                                        </td>
-                                        <td class="project-people">
-                                            <a href=""><img alt="image" class="img-circle" src="img/a3.jpg"></a>
-                                            <a href=""><img alt="image" class="img-circle" src="img/a1.jpg"></a>
-                                            <a href=""><img alt="image" class="img-circle" src="img/a2.jpg"></a>
-                                            <a href=""><img alt="image" class="img-circle" src="img/a4.jpg"></a>
-                                            <a href=""><img alt="image" class="img-circle" src="img/a5.jpg"></a>
                                         </td>
                                         <td>Medical Expense</td>
                                         <td class="project-actions">
@@ -451,25 +435,12 @@
                                     </tr>
                                     <tr>
                                         <td class="project-status">
-                                            <span class="label label-primary">On-going</span>
+                                            <span class="label label-primary">Approved</span>
                                         </td>
                                         <td class="project-title">
-                                            <strong>Monica Smith</strong> submitted Medical Expense approval request.
+                                            <strong>Monica Smith</strong> Medical Expense already approved.
                                             <br>
                                             <small class="text-muted">Today 5:60 pm - 12.06.2016</small>
-                                        </td>
-                                        <td class="project-completion">
-                                            <small>Completion with: 48%</small>
-                                            <div class="progress progress-mini">
-                                                <div style="width: 48%;" class="progress-bar"></div>
-                                            </div>
-                                        </td>
-                                        <td class="project-people">
-                                            <a href=""><img alt="image" class="img-circle" src="img/a3.jpg"></a>
-                                            <a href=""><img alt="image" class="img-circle" src="img/a1.jpg"></a>
-                                            <a href=""><img alt="image" class="img-circle" src="img/a2.jpg"></a>
-                                            <a href=""><img alt="image" class="img-circle" src="img/a4.jpg"></a>
-                                            <a href=""><img alt="image" class="img-circle" src="img/a5.jpg"></a>
                                         </td>
                                         <td>Medical Expense</td>
                                         <td class="project-actions">
@@ -485,25 +456,12 @@
                                     </tr>                                
                                     <tr>
                                         <td class="project-status">
-                                            <span class="label label-primary">On-going</span>
+                                            <span class="label label-warning">On-going</span>
                                         </td>
                                         <td class="project-title">
                                             <strong>Monica Smith</strong> submitted Medical Expense approval request.
                                             <br>
                                             <small class="text-muted">Today 5:60 pm - 12.06.2016</small>
-                                        </td>
-                                        <td class="project-completion">
-                                            <small>Completion with: 48%</small>
-                                            <div class="progress progress-mini">
-                                                <div style="width: 48%;" class="progress-bar"></div>
-                                            </div>
-                                        </td>
-                                        <td class="project-people">
-                                            <a href=""><img alt="image" class="img-circle" src="img/a3.jpg"></a>
-                                            <a href=""><img alt="image" class="img-circle" src="img/a1.jpg"></a>
-                                            <a href=""><img alt="image" class="img-circle" src="img/a2.jpg"></a>
-                                            <a href=""><img alt="image" class="img-circle" src="img/a4.jpg"></a>
-                                            <a href=""><img alt="image" class="img-circle" src="img/a5.jpg"></a>
                                         </td>
                                         <td>Medical Expense</td>
                                         <td class="project-actions">
