--- a/netishr/medicalexpenseform.html
+++ b/netishr/medicalexpenseform.html
@@ -94,16 +94,7 @@
                                 </ul>
                             </li>
                             <li><a href="job_description.html">Job Description</a></li>
-                            <li><a href="#"><span class="nav-label">Workload Analysis</span><span class="fa arrow"></span></a>
-                                <ul class="nav nav-third-level">
-                                    <li>
-                                        <a href="workloadanalysis_pic.html">PIC Assignment</a>
-                                    </li>
-                                    <li>
-                                        <a href="workload_calculation.html">Workload Calculation</a>
-                                    </li>
-                                </ul>
-                            </li>
+                            <li><a href="workload_analysis.html">Workload Analysis</a></li>
                             <li><a href="accountability_matrix.html">Accountability Matrix</a></li>
                         </ul>
                     </li>
@@ -182,11 +173,22 @@
                                     <li>
                                         <a href="#">Work Shifts</a>
                                     </li>
-                                    <li>
-                                        <a href="#">Benefits</a>
+                                    <li><a href="#">Benefits<span class="fa arrow"></span></a>
+                                        <ul class="nav nav-third-level">
+                                            <li>
+                                                <a href="medicalexpense.html">Medical Expense</a>
+                                            </li>
+                                            <li>
+                                                <a href="medicalexpenseadministration.html">Medical Expense Administration</a>
+                                            </li>
+                                        </ul>
                                     </li>
-                                    <li>
-                                        <a href="#">Business Trips</a>
+                                    <li><a href="#">Business trips<span class="fa arrow"></span></a>
+                                        <ul class="nav nav-third-level">
+                                            <li>
+                                                <a href="bistripsreimbursement.html">Reimbursement</a>
+                                            </li>
+                                        </ul>
                                     </li>
                                 </ul>
                             </li>
@@ -204,9 +206,6 @@
                                     </li>
                                     <li>
                                         <a href="payroll_salary_calculation.html">Salary Calculation</a>
-                                    </li>
-                                    <li>
-                                        <a href="payroll_salary_calculation_details.html">Payslip</a>
                                     </li>
                                 </ul>
                             </li>
@@ -388,6 +387,12 @@
                                                         Monica Smith
 													</div>
 												</div>                                             
+                                                <div class="form-group">
+													<label class="col-sm-2 control-label">NIP</label>
+													<div class="col-sm-10">
+                                                        13209107
+													</div>
+												</div>  
                                                 <div class="form-group">
 													<label class="col-sm-2 control-label">Request Date</label>
 													<div class="col-sm-10">
