--- a/netishr/performance_information_competency.html
+++ b/netishr/performance_information_competency.html
@@ -87,16 +87,7 @@
                                 </ul>
                             </li>
                             <li><a href="job_description.html">Job Description</a></li>
-                            <li><a href="#"><span class="nav-label">Workload Analysis</span><span class="fa arrow"></span></a>
-                                <ul class="nav nav-third-level">
-                                    <li>
-                                        <a href="workloadanalysis_pic.html">PIC Assignment</a>
-                                    </li>
-                                    <li>
-                                        <a href="workload_calculation.html">Workload Calculation</a>
-                                    </li>
-                                </ul>
-                            </li>
+                            <li><a href="workload_analysis.html">Workload Analysis</a></li>
                             <li><a href="accountability_matrix.html">Accountability Matrix</a></li>
                         </ul>
                     </li>
@@ -175,11 +166,22 @@
                                     <li>
                                         <a href="#">Work Shifts</a>
                                     </li>
-                                    <li>
-                                        <a href="#">Benefits</a>
+                                    <li><a href="#">Benefits<span class="fa arrow"></span></a>
+                                        <ul class="nav nav-third-level">
+                                            <li>
+                                                <a href="medicalexpense.html">Medical Expense</a>
+                                            </li>
+                                            <li>
+                                                <a href="medicalexpenseadministration.html">Medical Expense Administration</a>
+                                            </li>
+                                        </ul>
                                     </li>
-                                    <li>
-                                        <a href="#">Business Trips</a>
+                                    <li><a href="#">Business trips<span class="fa arrow"></span></a>
+                                        <ul class="nav nav-third-level">
+                                            <li>
+                                                <a href="bistripsreimbursement.html">Reimbursement</a>
+                                            </li>
+                                        </ul>
                                     </li>
                                 </ul>
                             </li>
@@ -197,9 +199,6 @@
                                     </li>
                                     <li>
                                         <a href="payroll_salary_calculation.html">Salary Calculation</a>
-                                    </li>
-                                    <li>
-                                        <a href="payroll_salary_calculation_details.html">Payslip</a>
                                     </li>
                                 </ul>
                             </li>
