Updated NetisHR files

--- a/netishr/index.html
+++ b/netishr/index.html
@@ -200,7 +200,10 @@
                                     <li><a href="#">Business trips<span class="fa arrow"></span></a>
                                         <ul class="nav nav-third-level">
                                             <li>
-                                                <a href="bistripsreimbursement.html">Reimbursement</a>
+                                                <a href="bistripsexpense.html">Expense</a>
+                                            </li>
+                                            <li>
+                                                <a href="bistripsexpensesummary.html">Expense Summary</a>
                                             </li>
                                         </ul>
                                     </li>
