--- a/netishr/administrator_performance_evaluation.html
+++ b/netishr/administrator_performance_evaluation.html
@@ -542,7 +542,7 @@
                                                             </table>
                                                         </div>
                                                     </div>
-                                                </div> A: Total of actual achievements in each cycle
+                                                </div> A: Actual achieved value
                                                 <br> W: Weight, in percentage
                                                 <br> Any: This matches any value of A and W
 
