--- a/netishr/competency_dictionary_new.html
+++ b/netishr/competency_dictionary_new.html
@@ -96,6 +96,8 @@
     <link href="css/animate.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 
+    <!-- Data picker -->
+    <script src="js/plugins/datapicker/bootstrap-datepicker.js"></script>
 
 </head>
 
@@ -511,7 +513,21 @@
                             <label class="font-noraml">Name</label>
                             <input type="text" id="quantity" name="quantity" value="" placeholder="Name" class="form-control">
                             <label class="font-noraml">Description</label>
-                            <input type="text" id="quantity" name="quantity" value="" placeholder="Description" class="form-control">
+                            <textarea class="form-control" placeholder="Description"></textarea>
+
+                            <label class="font-noraml">Valid from</label>
+                            <input id="checkbox" type="checkbox" checked=""> Has expiration
+                            <div class="input-group date">
+                                <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
+                                <input id="date_added" type="text" class="form-control" value="03/04/2014">
+                            </div>
+
+                            <label class="font-noraml">Valid to:</label>
+                            <div class="input-group date">
+                                <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
+                                <input id="date_added" type="text" class="form-control" value="03/04/2014">
+                            </div>
+
 
 
                         </div>
@@ -562,13 +578,13 @@
                                             <div class="form-group">
                                                 <label class="col-sm-2 control-label">Level name: </label>
                                                 <div class="col-sm-10">
-                                                    <input type="text" class="form-control">
+                                                    <input type="text" class="form-control" placeholder="Level name">
                                                 </div>
                                             </div>
                                             <div class="form-group">
                                                 <label class="col-sm-2 control-label">Level description: </label>
                                                 <div class="col-sm-10">
-                                                    <input type="text" class="form-control">
+                                                    <textarea class="form-control" placeholder="Description"></textarea>
                                                 </div>
                                             </div>
                                             <div class="form-group">
@@ -661,13 +677,13 @@
                                             <div class="form-group">
                                                 <label class="col-sm-2 control-label">Level name: </label>
                                                 <div class="col-sm-10">
-                                                    <input type="text" class="form-control">
+                                                    <input type="text" class="form-control" placeholder="Level name">
                                                 </div>
                                             </div>
                                             <div class="form-group">
                                                 <label class="col-sm-2 control-label">Level description: </label>
                                                 <div class="col-sm-10">
-                                                    <input type="text" class="form-control">
+                                                    <textarea class="form-control" placeholder="Description"></textarea>
                                                 </div>
                                             </div>
                                             <div class="form-group">
@@ -732,13 +748,13 @@
                                             <div class="form-group">
                                                 <label class="col-sm-2 control-label">Level name: </label>
                                                 <div class="col-sm-10">
-                                                    <input type="text" class="form-control">
+                                                    <input type="text" class="form-control" placeholder="Level name">
                                                 </div>
                                             </div>
                                             <div class="form-group">
                                                 <label class="col-sm-2 control-label">Level description: </label>
                                                 <div class="col-sm-10">
-                                                    <input type="text" class="form-control">
+                                                    <textarea class="form-control" placeholder="Description"></textarea>
                                                 </div>
                                             </div>
                                             <div class="form-group">
@@ -803,13 +819,13 @@
                                             <div class="form-group">
                                                 <label class="col-sm-2 control-label">Level name: </label>
                                                 <div class="col-sm-10">
-                                                    <input type="text" class="form-control">
+                                                    <input type="text" class="form-control" placeholder="Level name">
                                                 </div>
                                             </div>
                                             <div class="form-group">
                                                 <label class="col-sm-2 control-label">Level description: </label>
                                                 <div class="col-sm-10">
-                                                    <input type="text" class="form-control">
+                                                    <textarea class="form-control" placeholder="Description"></textarea>
                                                 </div>
                                             </div>
                                             <div class="form-group">
@@ -875,13 +891,13 @@
                                             <div class="form-group">
                                                 <label class="col-sm-2 control-label">Level name: </label>
                                                 <div class="col-sm-10">
-                                                    <input type="text" class="form-control">
+                                                    <input type="text" class="form-control" placeholder="Level name">
                                                 </div>
                                             </div>
                                             <div class="form-group">
                                                 <label class="col-sm-2 control-label">Level description: </label>
                                                 <div class="col-sm-10">
-                                                    <input type="text" class="form-control">
+                                                    <textarea class="form-control" placeholder="Description"></textarea>
                                                 </div>
                                             </div>
                                             <div class="form-group">
@@ -970,9 +986,28 @@
     <!-- Custom and plugin javascript -->
     <script src="js/inspinia.js"></script>
     <script src="js/plugins/pace/pace.min.js"></script>
-    <script src="js/w3data.js"></script>
+
+    <!-- Data picker -->
+    <script src="js/plugins/datapicker/bootstrap-datepicker.js"></script>
+
     <script>
-        w3IncludeHTML();
+        $(document).ready(function () {
+            $('#date_added').datepicker({
+                todayBtn: "linked",
+                keyboardNavigation: false,
+                forceParse: false,
+                calendarWeeks: true,
+                autoclose: true
+            });
+
+            $('#date_modified').datepicker({
+                todayBtn: "linked",
+                keyboardNavigation: false,
+                forceParse: false,
+                calendarWeeks: true,
+                autoclose: true
+            });
+        });
     </script>
 
 </body>
